# pandas-etl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  coverage.ini  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/actions/run-python-tests/: action.yaml
.github/workflows/: test-deploy.yml
pandas-etl/: __main__.py  etl.py
pandas_etl/: __main__.py  etl.py
requirements/: requirements.build.txt  requirements.dev.txt  requirements.docs.txt  requirements.tests.txt
tests/: conftest.py  docker-compose.yaml  test_etl.py  test_etl_postgresql.py
tests/data/: groupby_Instance2.csv  max.csv  test.csv
tests/etl_definition_folder/connections/: postgresql_sql_connections.yaml
tests/etl_definition_folder/pipelines/: pandas_pipeline_recovery_1.yaml
tests/etl_definition_folder/variables/: default_database_variables.yaml  postgresql_database_variables.yaml
tests/etl_definition_folder/variables/secrets/: .gitignore  postgresql_database-secret_variables.yaml
